--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -219,9 +219,9 @@ services:
       - ssrf_proxy_network
       - default
 
-  # Frontend web application.
+  # Frontend web application.   langgenius/dify-web:0.6.15
   web:
-    image: langgenius/dify-web:0.6.15
+    image: nspark:test2
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
@@ -238,7 +238,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-dify}
       PGDATA: ${PGDATA:-/var/lib/postgresql/data/pgdata}
     volumes:
-      - ./volumes/db/data:/var/lib/postgresql/data
+      - difydb:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD", "pg_isready" ]
       interval: 1s
@@ -606,3 +606,4 @@ networks:
 
 volumes:
   oradata:
+  difydb:
